crates/reinhardt-core/crates/macros/tests/ui/fail/missing_path.stderr
error: expected string literal
 --> tests/ui/fail/missing_path.rs:8:14
  |
8 |         auth:,
  |              ^
